--- a/css/media.css
+++ b/css/media.css
@@ -1,163 +1,222 @@
 /* for screens up to 480px */
-@media(max-width: 480px) {
-body {
-    background-color: rgb(205, 238, 249);
-}
+@media (max-width: 480px) {
+  /* body {
+        background-color: rgb(205, 238, 249);
+    } */
 
-.navbar {
+  .navbar {
     display: none;
     flex-direction: column;
     position: fixed;
     /* padding: 1px 10px; */
-    padding: 0.5em 0.65em;
+    padding: 0.7em 1em;
     top: 2.1em;
-    border-radius: 0  0 0.5em 0;
+    border-radius: 0 0 0.5em 0;
     background-color: rgba(62, 176, 252, 0.623);
-}
+  }
 
-.navbar ul {
+  .dark-theme .navbar {
+    background-color: #0e3568;
+  }
+
+  .navbar ul {
     display: flex;
     flex-direction: column;
-    row-gap: 16px; 
-}
+    /* row-gap: 16px;  */
+    row-gap: 1.5em;
+  }
 
-.navbar li {
-    font-size: 0.9em;
-}
+  .navbar li {
+    font-size: 1.1em;
+  }
 
-.menu_burger {
+  .menu_burger {
     position: fixed;
     background-color: rgb(62, 176, 252);
     border: 2px solid darkblue;
-    height: 30px;
-    width: 111px;
+    height: 2.5em;
+    width: 9em;
     border-radius: 0 0.3em 0 0;
-}
+    /* border-radius: 0.3em; */
+  }
 
-.menu {
+  .dark-theme .menu_burger {
+    background: #0e3568;
+    border: 2px solid rgb(243, 243, 252);
+  }
+
+  .menu {
     color: darkblue;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.2em;
     padding: 0.1em;
-}
+    margin-left: 0.6em;
+  }
 
-.burger {
+  .burger {
     display: flex;
     position: relative;
     position: fixed;
     align-items: center;
     justify-content: center;
-    height: 12px;
-    width: 27px;
+    height: 1.3em;
+    width: 2.7em;
     top: 0.5em;
     bottom: 0;
-    left: 4.5em;
+    left: 6em;
     right: 0;
-}
+    z-index: 50;
+    overflow-y: auto;
+    /* padding: 0.1em; */
+  }
 
-.burger span {
-    height: 2px;
+  .burger span {
+    /*2.5px - middle strip burger(thicknrss)*/
+    height: 2.5px;
     width: 50%;
     transform: scale(1);
     background-color: darkblue;
-}
+  }
 
-.burger::after, .burger::before {
-    content: '';
+  .dark-theme .burger span {
+    height: 2.5px;
+    width: 50%;
+    transform: scale(1);
+    background: white;
+  }
+
+  .burger::after,
+  .burger::before {
+    content: "";
     position: absolute;
-    height: 2px;
+    /*2.5px - up/down strip burger(thicknrss)*/
+    height: 2.5px;
     width: 50%;
     background-color: darkblue;
-}
+  }
 
-.burger::after{bottom: 0;}
-.burger::before{top: 0;}
+  .dark-theme .burger::after {
+    content: "";
+    position: absolute;
+    height: 2.5px;
+    width: 50%;
+    background: white;
+  }
 
-.burger.active span {
+  .dark-theme .burger::before {
+    content: "";
+    position: absolute;
+    height: 2.5px;
+    width: 50%;
+    background: white;
+  }
+
+  .burger::after {
+    bottom: 0;
+  }
+  .burger::before {
+    top: 0;
+  }
+
+  .burger.active span {
     transform: scale(0);
-}
+  }
 
-.burger.active::after {
+  .burger.active::after {
     bottom: 50%;
     transform: rotate(45deg) translate(0, 50%);
-}
+  }
 
-.burger.active::before {
+  .burger.active::before {
     top: 50%;
     transform: rotate(-45deg) translate(0, -50%);
-}
+  }
 
-.myphoto {
+  .myphoto {
     display: none;
-}
-h1 {
-    font-size: 1em;  
-}
-h2 {
-    font-size: 1.1em;
-}
-h3 {
+  }
+  h1 {
     font-size: 1em;
-}
-p {
-    font-size: 0.9em;  
-}
+  }
+  h2 {
+    font-size: 1.1em;
+  }
+  h3 {
+    font-size: 1em;
+  }
+  p {
+    font-size: 0.9em;
+  }
 
-.allSkills {
+  .allSkills {
     gap: 0.5em;
     grid-template-columns: auto auto;
-}
+  }
 
-.allSkills li {
-    box-shadow: 0.4em 0.3em 0.4em #565656;
-    font-size: 0.8em;
+  .allSkills li {
+    box-shadow: 0.5em 0.5em 0.5em #565656;
+    font-size: 1.1em;
     padding: 0.4em;
     margin: 0.3em;
-}
-.connect-icons {
+  }
+
+  .dark-theme .allSkills li {
+    box-shadow: 0.3em 0.3em 0.7em rgb(130, 166, 250);
+  }
+
+  .link {
+    display: none;
+  }
+
+  .connect-icons {
     gap: 2em;
     font-size: 0.8em;
-    }
+  }
 
-/*section Project - link name of Projects*/
-#myProjects a {
+  /*section Project - link name of Projects*/
+  #Projects a {
     font-weight: bold;
-    font-size: 0.8em;
-}
+    font-size: 0.9em;
+  }
 
-/*section Project - description and datecreated*/
-#descrProject,
-#dateProject  {
-    font-size: 0.8em; 
-}
+  #Projects p {
+    font-size: 0.9em;
+  }
 
-.but_submit {
+  /*section Project - description and datecreated*/
+  /* #descrProject,
+    #dateProject  {
+        font-size: 0.8em; 
+    } */
+
+  .but_submit {
     font-size: 1em;
     background-color: #a2a2d5;
     border-radius: 0.4em;
     margin: 0.3em;
     padding: 0.2em 0.5em;
-}
+  }
 
-.label {
+  .label {
     /* font-weight: bold; */
     margin-left: 1em;
     font-weight: 0.8em;
-}
+  }
 
-.input {
+  .input {
     font-size: 0.8em;
-    padding: 0.1em; 
+    padding: 0.1em;
     width: 9em;
-}
+  }
 
-#removeB, #editB {
+  #removeB,
+  #editB {
     margin: 0.2em;
     padding: 0.2em;
-    font-weight: 0.5em; 
-}
+    font-weight: 0.5em;
+  }
 
-.textArea {
+  .textArea {
     font-size: 0.8em;
     padding: 0.1em;
     border-radius: 0.3em;
@@ -165,197 +224,239 @@ p {
     height: 3em;
     border: 1.8px solid;
     margin-left: 2em;
-}
+  }
 
-.message_sections {
+  .message_sections {
     padding: 0.1em;
     font-size: 1em;
-}
+  }
 
-#messages {
+  #messages {
     font-size: 0.7em;
-}
-
+  }
 }
 /* small, mobile, (481px-768px) */
 @media (min-width: 481px) {
-.navbar {
+  .navbar {
     display: none;
     flex-direction: column;
     position: fixed;
     justify-content: space-between;
-    padding: 1em 2.2em;
-    top: 2.1em;
-    border-radius: 0  0 0.5em 0;
+    padding: 0.7em 1.9em;
+    top: 2.3em;
+    border-radius: 0 0 0.5em 0;
     background-color: rgba(62, 176, 252, 0.623);
-}
+  }
 
-.navbar ul {
+  .navbar ul {
     display: flex;
     flex-direction: column;
-    row-gap: 20px; 
-}
+    row-gap: 1.7em;
+  }
 
-.navbar li {
-    font-size: 1em;
-}
+  .navbar li {
+    font-size: 1.3em;
+  }
 
-.menu_burger {
+  .menu_burger {
     position: fixed;
     background-color: rgb(62, 176, 252);
     border: 2px solid darkblue;
-    height: 30px;
-    width: 170px;
+    height: 2.5em;
+    width: 12em;
     border-radius: 0 0.5em 0 0;
-}
+  }
 
-.menu {
+  .dark-theme .menu_burger {
+    background: #0e3568;
+    border: 2px solid rgb(243, 243, 252);
+  }
+
+  .menu {
     color: darkblue;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1.3em;
     padding: 0.1em;
-}
+    margin-left: 1.3em;
+  }
 
-.burger {
+  .burger {
     display: flex;
     position: relative;
     position: fixed;
     align-items: center;
     justify-content: center;
-    height: 14px;
-    width: 40px;
-    top: 0.5em;
+    height: 1.2em;
+    width: 2.7em;
+    top: 0.6em;
     bottom: 0;
-    left: 6em;
+    left: 9em;
     right: 0;
     z-index: 50;
     overflow-y: auto;
-    padding: 0.1em;
-}
+    /* padding: 0.1em; */
+  }
 
-
-.burger span {
-    height: 2px;
+  .burger span {
+    /*3px - middle strip burger(thicknrss)*/
+    height: 3px;
     width: 50%;
     transform: scale(1);
     background-color: darkblue;
-}
+  }
 
-.burger::after, .burger::before {
-    content: '';
+  .dark-theme .burger span {
+    height: 3px;
+    width: 50%;
+    transform: scale(1);
+    background: white;
+  }
+  .burger::after,
+  .burger::before {
+    content: "";
     position: absolute;
-    height: 2px;
+    /*3px - up/down strip burger(thicknrss)*/
+    height: 3px;
     width: 50%;
     background-color: darkblue;
-}
+  }
 
-.burger::after{bottom: 0;}
-.burger::before{top: 0;}
+  .dark-theme .burger::after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 50%;
+    background: white;
+  }
 
-.burger.active span {
+  .dark-theme .burger::before {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 50%;
+    background: white;
+  }
+
+  .burger::after {
+    bottom: 0;
+  }
+  .burger::before {
+    top: 0;
+  }
+
+  .burger.active span {
     transform: scale(0);
-}
+  }
 
-.burger.active::after {
+  .burger.active::after {
     bottom: 50%;
     transform: rotate(45deg) translate(0, 50%);
-}
+  }
 
-.burger.active::before {
+  .burger.active::before {
     top: 50%;
     transform: rotate(-45deg) translate(0, -50%);
-}
+  }
 
-h1 {
+  h1 {
     font-size: 1.5em;
-}
+  }
 
-h2 {
+  h2 {
     font-size: 1.4em;
-}
+  }
 
-h3 {
+  h3 {
     font-size: 1em;
-}
+  }
 
-p {
+  p {
     font-size: 1.1em;
-}
+  }
 
-.edu-name,
-.exp-date {
+  .edu-name,
+  .exp-date {
     grid-template-columns: 6em 1fr;
     padding-bottom: 1em;
-}
+  }
 
-#About {
+  #About {
     display: flex;
     flex-direction: column-reverse;
-}
+  }
 
-.myphoto {
+  .myphoto {
     width: 10em;
     height: 13em;
     justify-content: center;
-}
+  }
 
-.allSkills {
+  .allSkills {
     gap: 0.9em;
-}
+  }
 
-.allSkills li {
+  .allSkills li {
     box-shadow: 0.5em 0.4em 0.5em #565656;
     font-size: 1em;
     padding: 0.3em;
     margin: 0.2em;
-}
+  }
 
-.link {
+  .dark-theme .allSkills li {
+    box-shadow: 0.2em 0.3em 0.6em rgb(130, 166, 250);
+  }
+
+  .link {
     display: none;
-}
+  }
 
-.connect-icons {
+  .connect-icons {
     gap: 5em;
-}
+  }
 
-/*section Project - link name of Projects*/
-#myProjects a {
+  /*section Project - link name of Projects*/
+  #Projects a {
     font-weight: bold;
+    font-size: 1.1em;
+  }
+
+  #Projects p {
     font-size: 1em;
-}
+  }
 
-/*section Project - description and datecreated*/
-#descrProject,
-#dateProject  {
-    font-size: 0.9em; 
-}
+  /*section Project - description and datecreated*/
+  /* #descrProject,
+    #dateProject  {
+        font-size: 0.9em; 
+    } */
 
-.but_submit {
+  .but_submit {
     font-size: 1.1em;
     background-color: #a2a2d5;
     border-radius: 0.4em;
     margin: 0.3em;
     padding: 0.2em 0.5em;
-}
+  }
 
-.label {
+  .label {
     /* font-weight: bold; */
     margin-left: 1.5em;
     font-weight: 0.8em;
-}
+  }
 
-.input {
+  .input {
     font-size: 0.7em;
-    padding: 0.2em; 
-}
+    padding: 0.2em;
+  }
 
-#removeB, #editB {
+  #removeB,
+  #editB {
     margin: 0.2em;
     padding: 0.2em;
-    font-weight: 0.5em; 
-}
+    font-weight: 0.5em;
+  }
 
-.textArea {
+  .textArea {
     font-size: 0.9em;
     padding: 0.1em;
     border-radius: 0.3em;
@@ -363,134 +464,146 @@ p {
     height: 4em;
     border: 2px solid;
     margin-left: 2em;
-}
+  }
 
-.message_sections {
+  .message_sections {
     padding: 0.2em;
     font-size: 1em;
-}
+  }
 
-#messages {
+  #messages {
     font-size: 0.8em;
-}
-
+  }
 }
 /* tablet/laptop, (769px-1024px) */
 @media (min-width: 769px) {
-.navbar {
+  .navbar {
     display: flex;
-    margin: 0em;
+    /* margin: 0em; */
+    margin-left: 2.5%;
     padding: 0.5em;
     position: fixed;
-    width: 100%;
+    /* width: 100%; */
+    width: 95%;
     height: 5%;
     top: 0;
     background-color: rgb(62, 176, 252);
-}
+    border-radius: 0.5em;
+  }
 
-.navbar ul {
+  .navbar ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
+  }
 
-.navbar li {
+  .navbar li {
     font-size: 1.4em;
-}
+  }
 
-.burger, .menu_burger {
+  .burger,
+  .menu_burger {
     display: none;
-}
+  }
 
-h1 {
+  h1 {
     font-size: 1.8em;
-}
+  }
 
-h2 {
+  h2 {
     font-size: 1.7em;
-}
+  }
 
-h3 {
+  h3 {
     font-size: 1.1em;
-}
+  }
 
-p {
+  p {
     font-size: 1.2em;
-}
-.edu-name,
-.exp-date {
+  }
+  .edu-name,
+  .exp-date {
     grid-template-columns: 8em 1fr;
     padding-bottom: 1.2em;
-}
+  }
 
-#About {
+  #About {
     display: flex;
     flex-direction: column-reverse;
-}
+  }
 
-.myphoto {
+  .myphoto {
     width: 12em;
     height: 15em;
     justify-content: center;
-}
+  }
 
-.allSkills {
+  .allSkills {
     gap: 1em;
-}
+  }
 
-.allSkills li {
+  .allSkills li {
     box-shadow: 0.5em 0.5em 0.5em #565656;
     font-size: 1.1em;
     padding: 0.4em;
     margin: 0.3em;
-}
+  }
 
-.link {
+  .dark-theme .allSkills li {
+    box-shadow: 0.3em 0.3em 0.7em rgb(130, 166, 250);
+  }
+
+  .link {
     display: inline;
-}
+  }
 
-.connect-icons {
+  .connect-icons {
     gap: 3em;
     font-size: 1.1em;
-}
+  }
 
-/*section Project - link name of Projects*/
-#myProjects a {
+  /*section Project - link name of Projects*/
+  #Projects a {
     font-weight: bold;
     font-size: 1.3em;
-}
+  }
 
-/*section Project - description and datecreated*/
-#descrProject,
-#dateProject  {
-    font-size: 1em; 
-}
+  #Projects p {
+    font-size: 1.1em;
+  }
 
-.but_submit {
+  /*section Project - description and datecreated*/
+  /* #descrProject,
+    #dateProject  {
+        font-size: 1em; 
+    } */
+
+  .but_submit {
     font-size: 1.4em;
     background-color: #a2a2d5;
     border-radius: 0.5em;
     margin: 0.4em;
     padding: 0.2em 0.5em;
-}
+  }
 
-.label {
+  .label {
     font-weight: bold;
     margin-left: 1.5em;
-}
+  }
 
-.input {
+  .input {
     font-size: 0.9em;
-    padding: 0.2em; 
-}
+    padding: 0.2em;
+  }
 
-#removeB, #editB {
+  #removeB,
+  #editB {
     margin: 0.3em;
     padding: 0.3em 0.4em;
-    font-weight: 0.6em; 
-}
+    font-weight: 0.6em;
+  }
 
-.textArea {
+  .textArea {
     font-size: 0.9em;
     padding: 0.1em;
     border-radius: 0.3em;
@@ -498,138 +611,149 @@ p {
     height: 5em;
     border: 2px solid;
     margin-left: 2em;
-}
+  }
 
-.message_sections {
+  .message_sections {
     padding: 0.4em;
     font-size: 1.2em;
-}
-#messages {
+  }
+  #messages {
     font-size: 0.9em;
+  }
 }
 
-}
 /* desctop, (>1025px) */
 @media (min-width: 1025px) {
-
-.container{
+  .container {
     width: 80%;
     margin-left: 10%;
-}
-.navbar {
-    margin: 0em;
+  }
+  .navbar {
+    /* margin: 0em; */
+    margin-left: 5%;
     padding: 0.5em;
     position: fixed;
-    width: 100%;
+
+    width: 90%;
     height: 5%;
     background-color: rgb(62, 176, 252);
-}
+    border-radius: 0.5em;
+  }
 
-.navbar ul {
+  .navbar ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-}
+    align-items: center;
+  }
 
-.navbar li {
+  .navbar li {
     font-size: 1.6em;
-}
+  }
 
-.burger {
+  .burger {
     display: none;
-}
+  }
 
-#About {
+  #About {
     display: flex;
     flex-direction: row;
-}
+  }
 
-.myphoto {
+  .myphoto {
     margin-top: 2em;
     width: 12em;
     height: 15em;
     text-align: center;
-}
+  }
 
-h1 {
+  h1 {
     font-size: 2em;
-}
+  }
 
-h2 {
+  h2 {
     font-size: 1.8em;
-}
+  }
 
-h3 {
+  h3 {
     font-size: 1.3em;
-    text-shadow: 0.09em 0.06em rgb(179, 179, 180);
-}
+  }
 
-p {
+  p {
     font-size: 1.3em;
-}
+  }
 
-.edu-name,
-.exp-date {
+  .edu-name,
+  .exp-date {
     grid-template-columns: 10em 1fr;
     padding-bottom: 1.5em;
-}
+  }
 
-.allSkills {
+  .allSkills {
     gap: 1.2em;
-}
+  }
 
-.allSkills li {
+  .allSkills li {
     box-shadow: 0.6em 0.5em 0.6em #565656;
     font-size: 1.2em;
     padding: 0.5em;
     margin: 0.3em;
-}
+  }
 
-.link {
+  .dark-theme .allSkills li {
+    box-shadow: 0.3em 0.3em 0.7em rgb(130, 166, 250);
+  }
+
+  .link {
     display: inline;
-}
+  }
 
-.connect-icons {
+  .connect-icons {
     gap: 5em;
     font-size: 1.2em;
-}
+  }
 
-#myProjects a {
+  #Projects a {
     font-weight: bold;
     font-size: 1.3em;
-}
+  }
 
-/*section Project - description and datecreated*/
-#descrProject,
-#dateProject  {
-    font-size: 1.1em; 
-}
+  #Projects p {
+    font-size: 1.1em;
+  }
 
-.but_submit {
+  /*section Project - description and datecreated*/
+  /* #descrProject,
+    #dateProject  {
+        font-size: 1.1em; 
+    } */
+
+  .but_submit {
     font-size: 1.5em;
     background-color: #a2a2d5;
     border-radius: 0.5em;
     margin: 0.5em;
     padding: 0.3em 0.6em;
-}
+  }
 
-.label {
+  .label {
     font-weight: bold;
     margin-left: 2em;
-}
+  }
 
-.input {
+  .input {
     font-size: 1em;
-    padding: 0.1em; 
-}
+    padding: 0.1em;
+  }
 
-#removeB, #editB {
+  #removeB,
+  #editB {
     margin: 0.4em 0.6em;
     padding: 0.3em 0.4em;
-    font-weight: 0.7em; 
-}
+    font-weight: 0.7em;
+  }
 
-.textArea {
+  .textArea {
     font-weight: bold;
     font-size: 1em;
     padding: 0.1em;
@@ -638,16 +762,14 @@ p {
     height: 3em;
     border: 1.8px solid;
     margin-left: 2em;
-}
+  }
 
-.message_sections {
+  .message_sections {
     padding: 0.5em;
     font-size: 1.2em;
-}
-/* messages - section for entered messages */
-#messages {
+  }
+  /* messages - section for entered messages */
+  #messages {
     font-size: 1.1em;
-}
-
-
+  }
 }
